reverting fix on http://blogs.bytecode.com.au/glen/2011/07/14/eliminating-annoying-flicker-transitions-with.html

--- a/search-result-formatting.css
+++ b/search-result-formatting.css
@@ -6,9 +6,6 @@
     font-family: "Sanchez Regular";
     src: url(fonts/Sanchez-Regular.ttf);
 }
-.ui-page {
-    -webkit-backface-visibility: hidden;
-}
 .ptf{
     background-color:#E6E6E6;
     padding: 7px;
